--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -9,7 +9,35 @@ body {
 h1 {
     color: #333;
 }
+/* start 'Understanding 5/3/1' section */
+h2 {
+    color: #333;
+}
 
+section {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section p {
+    color: #555;
+    line-height: 1.6;
+}
+
+section ul {
+    color: #555;
+    line-height: 1.6;
+    list-style-type: disc;
+    margin-left: 20px;
+}
+/* End 'Understanding 5/3/1' section */
 form {
     background-color: #fff;
     padding: 20px;
