--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -10,9 +10,9 @@
     <h1>Wendler 5/3/1 Calculator</h1>
     
     <section> 
-        <h2>
-            Enter your most recent PRs for each lift field.
-        </h2>
+        <p>
+            <strong>Enter your most recent PRs for each lift field.</strong>
+        </p>
     </section>
     <!-- Above section to be moved to its own page at later date -->
     <form method="post">
