--- a/frontend/static/css/calculator.css
+++ b/frontend/static/css/calculator.css
@@ -20,7 +20,7 @@ section {
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    text-align: left;
+    text-align: center;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
