update home text

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/calculator.css') }}">
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome To The 5/3/1 Calculator</h1>
     
     <section> 
         <h2>Got bored, made this app..</h2>
@@ -17,8 +17,7 @@
             Your training max is calculated as 90% of your 1RM. Each week, you perform sets based on a percentage of this training max.
         </p>
         <p>
-            After completing a four-week cycle, you can increase your training max by 5 lbs for upper body lifts (bench press, overhead press) 
-            and by 10 lbs for lower body lifts (squat, deadlift) before starting the next cycle.
+            This app is made for your convinience to calculate the weights you should be lifting each week based on your current 1RMs. Pulling out your phone to calculate your sets for each set during your workout gets annoying so now you can have an easy way to simply calculate all your set percentages at once.
         </p>
         <p>
             <strong>Note:</strong> You should first know your 1-rep max (1RM) for each lift. 
