--- a/frontend/static/css/calculator.css
+++ b/frontend/static/css/calculator.css
@@ -21,9 +21,10 @@ section {
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 600px;
+    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 section p {
