--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -52,7 +52,7 @@
     <!-- Generate PDF button -->
         <form action="{{ url_for('generate_pdf') }}" method="POST">
             <input type="hidden" name="workout_plan" id="workout_plan_input">
-            <button type="submit">Download as PDF</button>
+            <button type="submit" class="pdf-button">Download as PDF</button>
         </form>
 
         <script>
