--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -50,14 +50,15 @@
         {% endfor %}
 
     <!-- Generate PDF button -->
-        <form action="{{ url_for('generate_pdf') }}" method="POST">
-            <input type="hidden" name="workout_plan" id="workout_plan_input">
-            <button type="submit" class="pdf-button">Download as PDF</button>
-        </form>
-
+        <div class="pdf-button-container">
+            <form action="{{ url_for('generate_pdf') }}" method="POST">
+                <input type="hidden" name="workout_plan" id="workout_plan_input">
+                <button type="submit" class="pdf-button">Download as PDF</button>
+            </form>
+        </div> 
         <script>
             document.getElementById('workout_plan_input').value = JSON.stringify({{ workout_plan | tojson | safe }});
-        </script>   
+        </script>  
     {% endif %}
 
     <!-- Home page return link -->
