--- a/frontend/templates/pdf_template.html
+++ b/frontend/templates/pdf_template.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>Your Workout Plan</h1>
+    <h1>Your Workout Plan (in {{ unit }})</h1>
     <div class="workout-plan">
         {% for week, lifts in workout_plan.items() %}
             <h2>{{ week }}</h2>
@@ -38,7 +38,7 @@
                 <h3>{{ lift }}</h3>
                 <p>
                     {% for reps, weight in sets %}
-                        {{ reps }} x {{ weight }}{% if not loop.last %}, {% endif %}
+                        {{ reps }} x {{ weight }}{{ unit}}{% if not loop.last %}, {% endif %}
                     {% endfor %}
                 </p>
             {% endfor %}
