add program selector

--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -16,6 +16,7 @@
     </section>
 
     <form method="post">
+        <!-- Program Selector -->
         <label for="variation">Select 5/3/1 Variation:</label>
         <select id="variation" name="variation">
             <option value="standard">Standard 5/3/1</option>
