--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -22,7 +22,7 @@
         <select id="variation" name="variation">
             <option value="standard">Standard 5/3/1</option>
             <option value="boring-but-big">Boring But Big</option>
-            <option value="fsl">First Set Last (FSL)</option>
+            <option value="triumvirate">Triumvirate</option>
             <option value="joker-sets">Joker Sets</option>
             <option value="building-the-monolith">Building the Monolith</option>
             <option value="531-for-powerlifting">5/3/1 for Powerlifting</option>
