add optional deload selector

--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -70,8 +70,8 @@
         <!-- Deload Weeks Selector -->
         <label for="deload">Include Deload Weeks:</label>
         <select id="deload" name="deload">
+            <option value="yes" selected>Yes</option> <!-- Default option -->
             <option value="no">No</option>
-            <option value="yes">Yes</option>
         </select><br><br>
         
         <!-- Additional Sets Options -->
