add FSL set option - edit

--- a/frontend/templates/calculator.html
+++ b/frontend/templates/calculator.html
@@ -120,8 +120,12 @@
             {% for lift, sets in lifts.items() %}
                 <strong>{{ lift }}:</strong>
                 <span>
-                    {% for reps, weight in sets %}
-                        {{ reps }} x {{ weight }} {{ unit }}{% if not loop.last %}, {% endif %}
+                    {% for set in sets %}
+                        {% if set is string %}
+                            {{ set }}{% if not loop.last %}, {% endif %}
+                        {% else %}
+                            {{ set[0] }} x {{ set[1] }} {{ unit }}{% if not loop.last %}, {% endif %}
+                        {% endif %}
                     {% endfor %}
                 </span>
                 <br><br>
